force-app/main/default/objects/Salesforce_DevOps_Task__c/Salesforce_DevOps_Task__c.object-meta.xml
<CustomObject>
    <label>Salesforce DevOps Task</label>
    <nameField>
        <label>Task</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce DevOps Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>