force-app/main/default/objects/Salesforce_DevOps_Task__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grace</fullName>
            </value>
            <value>
                <fullName>Jack</fullName>
            </value>
            <value>
                <fullName>Sonny</fullName>
            </value>
            <value>
                <fullName>Tito</fullName>
            </value>
            <value>
                <fullName>Zac</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>