force-app/main/default/objects/Salesforce_DevOps_Task__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <label>Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Peninsula UK</fullName>
            </value>
            <value>
                <fullName>Peninsula ROI</fullName>
            </value>
            <value>
                <fullName>Croner</fullName>
            </value>
            <value>
                <fullName>Corner-i</fullName>
            </value>
            <value>
                <fullName>Bright</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>