force-app/main/default/objects/Salesforce_DevOps_Task__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Salesforce_Team_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>