force-app/main/default/objects/Salesforce_DevOps_Task__c/listViews/Team_Overview.listView-meta.xml
<ListView>
    <fullName>Team_Overview</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Business__c</columns>
    <columns>Project__c</columns>
    <columns>Status__c</columns>
    <columns>Importance__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Completed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Team Overview</label>
</ListView>